# OpenVideoDiary

./: CMakeLists.txt  README.md  appveyor.yml
build_system/: appveyor.helper.py
src/: CMakeLists.txt  main.cpp  rvboxlayout.h
