project(OpenVideoDiary)
cmake_minimum_required(VERSION 3.5.1)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")

cmake_policy(SET CMP0020 OLD)
cmake_policy(SET CMP0058 OLD)

find_package(Qt5Core)
find_package(Qt5Widgets)
find_package(Qt5MultimediaWidgets)
find_package(Qt5Sql)

#set(CMAKE_AUTOMOC ON)
#set(CMAKE_INCLUDE_CURRENT_DIR ON)

include_directories(
	${Qt5Widgets_INCLUDE_DIRS}
	${Qt5Core_INCLUDE_DIRS}
	${Qt5MultimediaWidgets_INCLUDE_DIRS}
	${Qt5Sql_INCLUDE_DIRS}
	)

if("${CMAKE_CXX_COMPILER_ID}" MATCHES "(GNU|Clang)")
	set(CMAKE_CXX_FLAGS "-std=c++11 -Wno-deprecated")
endif()


add_subdirectory(src)

string(SUBSTRING ${TAG} 1 -1 VERSION)
string(REPLACE "." ";" VERSION_SPLIT ${VERSION})
list(GET ${VERSION_SPLIT} 0 VERSION_MAJOR)
list(GET ${VERSION_SPLIT} 1 VERSION_MINOR)
list(GET ${VERSION_SPLIT} 2 VERSION_PATCH)


set(CPACK_GENERATOR NSIS)
set(CPACK_PACKAGE_NAME "OpenVideoDiary")
set(CPACK_PACKAGE_VENDOR "bunfet.me")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Video Diary Application")
set(CPACK_PACKAGE_VERSION ${VERSION})
set(CPACK_PACKAGE_VERSION_MAJOR ${VERSION_MAJOR})
set(CPACK_PACKAGE_VERSION_MINOR ${VERSION_MINOR})
set(CPACK_PACKAGE_VERSION_PATCH ${VERSION_PATCH})
set(CPACK_PACKAGE_INSTALL_DIRECTORY "OpenVideoDiary")
SET(CPACK_RESOURCE_FILE_LICENSE "${PROJECT_SOURCE_DIR}/LICENSE")
SET(CPACK_NSIS_MODIFY_PATH OFF)
SET(CPACK_PACKAGE_EXECUTABLES "OpenVideoDiary;OpenVideoDiary")

INCLUDE(CPack)

